tests/ui/bad-bound.stderr
error: expected rustc release number like 1.31, or nightly date like 2024-05-12
 --> tests/ui/bad-bound.rs:1:27
  |
1 | #[rustversion_msrv::since(stable)]
  |                           ^^^^^^

error: expected rustc release number like 1.31, or nightly date like 2024-05-12
 --> tests/ui/bad-bound.rs:4:31
  |
4 | #[rustversion_msrv::any(since(stable))]
  |                               ^^^^^^
