tests/ui/bad-bound.rs
#[rustversion_msrv::since(stable)]
struct S;

#[rustversion_msrv::any(since(stable))]
struct S;

fn main() {}
